--- a/sweep.yaml
+++ b/sweep.yaml
@@ -9,10 +9,10 @@ parameters:
   dense_units:
     values: [128, 256]
   dropout:
-    values: [0.3, 0.4]
+    values: [0.0, 0.2]
   learning_rate:
-    values: [0.001, 0.003]
+    value: 0.001
   epochs:
     value: 15
   optimizer:
-    value: "rmsprop"
+    values: ["adam", "rmsprop"]
