Added name and one more dropout setting to sweep

--- a/sweep.yaml
+++ b/sweep.yaml
@@ -1,3 +1,4 @@
+name: param-search
 program: train.py
 method: grid
 metric:
@@ -9,7 +10,7 @@ parameters:
   dense_units:
     values: [128, 256]
   dropout:
-    values: [0.0, 0.2]
+    values: [0.0, 0.2, 0.3]
   learning_rate:
     value: 0.001
   epochs:
